--- a/kadai_008/kadai_008.ipynb
+++ b/kadai_008/kadai_008.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 80,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Glh9IXNC99sK",
-        "outputId": "3fe87b0e-3409-4c5e-d44e-a9dc6c6a2c1b"
+        "outputId": "47bc57b7-6356-4518-9f95-68979b375e3d"
       },
       "outputs": [
         {
@@ -38,14 +38,14 @@
         "\n",
         "var = random.randint(0,100)\n",
         "\n",
-        "if var % 3 == 0:\n",
+        "if var % 3 == 0 and var % 5 == 0:\n",
+        "  print(\"FizzBuzz\")\n",
+        "\n",
+        "elif var % 3 == 0:\n",
         "  print(\"Fizz\")\n",
         "\n",
         "elif var % 5 == 0:\n",
-        "  print(Buzz)\n",
-        "\n",
-        "elif var % 3 == 0 and var % 5 == 0:\n",
-        "  print(FizzBuzz)\n",
+        "  print(\"Buzz\")\n",
         "\n",
         "else:\n",
         "  print(var)"
