--- a/kadai_013/kadai_013.ipynb
+++ b/kadai_013/kadai_013.ipynb
@@ -16,29 +16,29 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QtrshUzq3hFj",
-        "outputId": "f92aaa4c-d88a-49a2-8908-96a8a4b02fd9"
+        "outputId": "f5470c61-66c1-4eee-97ea-9071f0b09f0d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "消費税込みの価格は110.00000000000001円です。\n"
+            "消費税込みの価格は121.0円です。\n"
           ]
         }
       ],
       "source": [
         "def calculate_total(price, consumption_tax):\n",
-        "  total = price * (1 + consumption_tax)\n",
+        "  total = price + (price * consumption_tax / 100)\n",
         "  return total\n",
         "\n",
-        "total_price = calculate_total(100, 0.1)\n",
+        "total_price = calculate_total(110, 10)\n",
         "\n",
         "print(f\"消費税込みの価格は{total_price}円です。\")"
       ]
