--- a/kadai_015/kadai_015.ipynb
+++ b/kadai_015/kadai_015.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rPF-WdL4Mj_n",
-        "outputId": "7fb43c65-bd03-4e5c-9943-5b657866b536"
+        "outputId": "03bfa618-c709-49b6-abcd-31157a5fe315"
       },
       "outputs": [
         {
@@ -41,10 +41,14 @@
         "    self.name = name\n",
         "    self.age = age\n",
         "\n",
+        "  def printinfo(self):\n",
+        "        print(self.name)\n",
+        "        print(self.age)\n",
+        "\n",
         "human = Human(\"豊臣秀吉\" , 40)\n",
         "\n",
-        "print(human.name)\n",
-        "print(human.age)\n"
+        "human.printinfo()\n",
+        "\n"
       ]
     }
   ]
